--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,13 +1,24 @@
 version: v1
+managed:
+  enabled: true
+  go_package_prefix:
+    default: github.com/johanbrandhorst/hashipet/proto
+    except:
+      - buf.build/googleapis/googleapis
+      - buf.build/grpc-ecosystem/grpc-gateway
 plugins:
   - remote: buf.build/library/plugins/go:v1.27.1-1
     out: proto
-    opt: paths=source_relative
+    opt:
+      - paths=source_relative
   - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
     out: proto
-    opt: paths=source_relative,require_unimplemented_servers=false
+    opt:
+      - paths=source_relative
+      - require_unimplemented_servers=false
   - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway:v2.7.2-1
     out: proto
-    opt: paths=source_relative
+    opt:
+      - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.2-1
     out: third_party/OpenAPI
