--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -22,3 +22,5 @@ plugins:
       - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.2-1
     out: third_party/OpenAPI
+    opt:
+      - json_names_for_fields=false
